[package]
name = "kopi"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils.hasenbanck@tsukisoft.com"]
description = "Safe API to embed an ECMAScript engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.65"
publish = false

[features]
default = ["getrandom"]

[dependencies]
once_cell = "1.16"
getrandom = { version = "0.2", optional = true }
v8 = "0.54"

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true

[profile.bench]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1
codegen-units = 16
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2
